--- a/functions/package.json
+++ b/functions/package.json
@@ -9,9 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "ethers": "^4.0.43",
     "express": "^4.17.1",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "web3": "^1.2.2"
   },
   "private": true
 }
